--- a/front/app/src/main/res/layout/activity_main.xml
+++ b/front/app/src/main/res/layout/activity_main.xml
@@ -7,12 +7,23 @@
     tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/textTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="24dp"
+        android:fontFamily="sans-serif-black"
+        android:text="Давайте составим маршрут вашего путешествия:"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ListView
+        android:id="@+id/userTransport"
+        android:layout_width="241dp"
+        android:layout_height="40dp"
+        tools:layout_editor_absoluteX="150dp"
+        tools:layout_editor_absoluteY="122dp"
+        android:choiceMode="multipleChoice" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
