--- a/front/app/src/main/res/layout/activity_main.xml
+++ b/front/app/src/main/res/layout/activity_main.xml
@@ -18,12 +18,76 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ListView
-        android:id="@+id/userTransport"
-        android:layout_width="241dp"
-        android:layout_height="40dp"
-        tools:layout_editor_absoluteX="150dp"
-        tools:layout_editor_absoluteY="122dp"
-        android:choiceMode="multipleChoice" />
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="222dp"
+        android:layout_height="38dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="36dp"
+        android:text="Выберите транспорт, на котором хотите добраться до курорта:"
+        app:layout_constraintBottom_toTopOf="@+id/switchTrain"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textTitle"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <Switch
+        android:id="@+id/switchTrain"
+        android:layout_width="105dp"
+        android:layout_height="27dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="88dp"
+        android:text="Поезд"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textTitle" />
+
+    <Switch
+        android:id="@+id/switchAirplane"
+        android:layout_width="105dp"
+        android:layout_height="27dp"
+        android:layout_marginTop="16dp"
+        android:text="Самолёт"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.058"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/switchTrain" />
+
+    <Switch
+        android:id="@+id/switchOwnCar"
+        android:layout_width="105dp"
+        android:layout_height="27dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="12dp"
+        android:text="Машина"
+        app:layout_constraintStart_toEndOf="@+id/switchTrain"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+    <SeekBar
+        android:id="@+id/seekPrice"
+        android:layout_width="118dp"
+        android:layout_height="20dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="23dp"
+        android:max="100"
+        app:layout_constraintStart_toEndOf="@+id/textView2"
+        app:layout_constraintTop_toBottomOf="@+id/switchAirplane" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="23dp"
+        android:text="Желаемая цена (руб):"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/switchAirplane" />
+
+    <TextView
+        android:id="@+id/textPrice"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:text="0"
+        app:layout_constraintStart_toEndOf="@+id/seekPrice"
+        tools:layout_editor_absoluteY="227dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
