--- a/front/app/src/main/res/layout/activity_main.xml
+++ b/front/app/src/main/res/layout/activity_main.xml
@@ -20,12 +20,14 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="222dp"
-        android:layout_height="38dp"
+        android:layout_width="376dp"
+        android:layout_height="36dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="36dp"
+        android:layout_marginEnd="16dp"
         android:text="Выберите транспорт, на котором хотите добраться до курорта:"
         app:layout_constraintBottom_toTopOf="@+id/switchTrain"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textTitle"
         app:layout_constraintVertical_bias="0.0" />
@@ -55,39 +57,80 @@
         android:id="@+id/switchOwnCar"
         android:layout_width="105dp"
         android:layout_height="27dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="88dp"
         android:text="Машина"
         app:layout_constraintStart_toEndOf="@+id/switchTrain"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
-
-    <SeekBar
-        android:id="@+id/seekPrice"
-        android:layout_width="118dp"
-        android:layout_height="20dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="23dp"
-        android:max="100"
-        app:layout_constraintStart_toEndOf="@+id/textView2"
-        app:layout_constraintTop_toBottomOf="@+id/switchAirplane" />
+        app:layout_constraintTop_toBottomOf="@+id/textTitle" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="23dp"
+        android:layout_marginTop="16dp"
         android:text="Желаемая цена (руб):"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/switchAirplane" />
+
+    <SeekBar
+        android:id="@+id/seekPrice"
+        android:layout_width="118dp"
+        android:layout_height="20dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:max="100"
+        app:layout_constraintStart_toEndOf="@+id/textView2"
         app:layout_constraintTop_toBottomOf="@+id/switchAirplane" />
 
     <TextView
         android:id="@+id/textPrice"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
         android:text="0"
         app:layout_constraintStart_toEndOf="@+id/seekPrice"
-        tools:layout_editor_absoluteY="227dp" />
+        app:layout_constraintTop_toBottomOf="@+id/switchAirplane" />
+
+    <Button
+        android:id="@+id/buttonDeparture"
+        android:layout_width="187dp"
+        android:layout_height="51dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="20dp"
+        android:text="Выбрать дату отправления"
+        android:textSize="10sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+    <Button
+        android:id="@+id/buttonArrival"
+        android:layout_width="187dp"
+        android:layout_height="51dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="12dp"
+        android:text="Выбрать дату прибытия"
+        android:textSize="10sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/seekPrice" />
+
+    <TextView
+        android:id="@+id/textDateDeparture"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="48dp"
+        android:textSize="24sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonDeparture" />
+
+    <TextView
+        android:id="@+id/textDateArrival"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="48dp"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonArrival" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
