--- a/front/app/src/main/res/layout/activity_main.xml
+++ b/front/app/src/main/res/layout/activity_main.xml
@@ -4,10 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-<<<<<<< HEAD
     android:background="@drawable/main_background"
-=======
->>>>>>> 5bbb34d62e594c73e0942835c334626498b4c145
     tools:context=".MainActivity">
 
     <TextView
@@ -51,74 +48,144 @@
         android:id="@+id/switchAirplane"
         android:layout_width="105dp"
         android:layout_height="27dp"
+        android:layout_marginStart="36dp"
         android:layout_marginTop="16dp"
         android:text="Самолёт"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.058"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/switchTrain" />
+        app:layout_constraintStart_toEndOf="@+id/switchOwnCar"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <Switch
         android:id="@+id/switchOwnCar"
         android:layout_width="105dp"
         android:layout_height="27dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="36dp"
         android:layout_marginTop="88dp"
         android:text="Машина"
         app:layout_constraintStart_toEndOf="@+id/switchTrain"
         app:layout_constraintTop_toBottomOf="@+id/textTitle" />
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:text="Желаемая цена (руб):"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/switchAirplane" />
-
-    <SeekBar
-        android:id="@+id/seekPrice"
-        android:layout_width="118dp"
-        android:layout_height="20dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        android:max="100"
-        app:layout_constraintStart_toEndOf="@+id/textView2"
-        app:layout_constraintTop_toBottomOf="@+id/switchAirplane" />
-
-    <TextView
-        android:id="@+id/textPrice"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        android:text="0"
-        app:layout_constraintStart_toEndOf="@+id/seekPrice"
-        app:layout_constraintTop_toBottomOf="@+id/switchAirplane" />
-
     <Button
         android:id="@+id/buttonDeparture"
         android:layout_width="187dp"
         android:layout_height="51dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="24dp"
         android:text="Выбрать дату отправления"
         android:textSize="10sp"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView9" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:text="часов"
+        app:layout_constraintStart_toEndOf="@+id/textView6"
+        app:layout_constraintTop_toBottomOf="@+id/editHours" />
+
+    <SeekBar
+        android:id="@+id/seekMinPrice"
+        android:layout_width="118dp"
+        android:layout_height="20dp"
+        android:layout_marginStart="7dp"
+        android:layout_marginTop="12dp"
+        android:max="100"
+        app:layout_constraintStart_toEndOf="@+id/textView8"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+    <SeekBar
+        android:id="@+id/seekMaxPrice"
+        android:layout_width="118dp"
+        android:layout_height="20dp"
+        android:layout_marginTop="4dp"
+        android:max="100"
+        app:layout_constraintStart_toEndOf="@+id/textView9"
+        app:layout_constraintTop_toBottomOf="@+id/seekMinPrice" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="184dp"
+        android:text="дней"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editDays" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="24dp"
+        android:text="Желаемое время в пути:"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textDateDeparture" />
+
+    <EditText
+        android:id="@+id/editDays"
+        android:layout_width="29dp"
+        android:layout_height="38dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="24dp"
+        android:ems="10"
+        android:inputType="number"
+        android:textSize="14sp"
+        app:layout_constraintStart_toEndOf="@+id/textView5"
+        app:layout_constraintTop_toBottomOf="@+id/textDateDeparture" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="24dp"
+        android:text="Желаемая цена поездки:"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/switchAirplane" />
+
+    <EditText
+        android:id="@+id/editHours"
+        android:layout_width="29dp"
+        android:layout_height="38dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="24dp"
+        android:ems="10"
+        android:inputType="number"
+        android:textSize="14sp"
+        app:layout_constraintStart_toEndOf="@+id/editDays"
+        app:layout_constraintTop_toBottomOf="@+id/textDateDeparture" />
+
+    <TextView
+        android:id="@+id/textMinPrice"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="12dp"
+        android:text="0 рублей"
+        app:layout_constraintStart_toEndOf="@+id/seekMinPrice"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+    <TextView
+        android:id="@+id/textMaxPrice"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="36dp"
+        android:text="0 рублей"
+        app:layout_constraintStart_toEndOf="@+id/seekMinPrice"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <Button
         android:id="@+id/buttonArrival"
         android:layout_width="187dp"
         android:layout_height="51dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="12dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="16dp"
         android:text="Выбрать дату прибытия"
         android:textSize="10sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/seekPrice" />
+        app:layout_constraintTop_toBottomOf="@+id/textMaxPrice" />
 
     <TextView
         android:id="@+id/textDateDeparture"
@@ -138,60 +205,38 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonArrival" />
 
-    <TextView
-        android:id="@+id/textView5"
+    <Button
+        android:id="@+id/mainButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="44dp"
-        android:text="Желаемое время в пути:"
+        android:layout_marginTop="98dp"
+        android:layout_marginBottom="32dp"
+        android:text="Вычислить маршрут!"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonDeparture" />
+        app:layout_constraintTop_toBottomOf="@+id/textView6"
+        app:layout_constraintVertical_bias="0.058" />
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/textView8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="176dp"
-        android:text="дней"
+        android:layout_marginStart="31dp"
+        android:layout_marginTop="12dp"
+        android:text="Минимум:"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editDays" />
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/textView9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:text="часов"
-        app:layout_constraintStart_toEndOf="@+id/textView6"
-        app:layout_constraintTop_toBottomOf="@+id/editHours" />
-
-    <EditText
-        android:id="@+id/editDays"
-        android:layout_width="26dp"
-        android:layout_height="33dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="36dp"
-        android:ems="10"
-        android:inputType="number"
-        android:textSize="10sp"
-        app:layout_constraintStart_toEndOf="@+id/textView5"
-        app:layout_constraintTop_toBottomOf="@+id/buttonDeparture" />
-
-    <EditText
-        android:id="@+id/editHours"
-        android:layout_width="26dp"
-        android:layout_height="33dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="36dp"
-        android:ems="10"
-        android:inputType="number"
-        android:textSize="10sp"
-        app:layout_constraintStart_toEndOf="@+id/editDays"
-        app:layout_constraintTop_toBottomOf="@+id/buttonDeparture" />
+        android:layout_marginStart="31dp"
+        android:layout_marginTop="5dp"
+        android:text="Максимум:"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
-<<<<<<< HEAD
 
-=======
->>>>>>> 5bbb34d62e594c73e0942835c334626498b4c145
