--- a/front/app/src/main/res/layout/activity_main.xml
+++ b/front/app/src/main/res/layout/activity_main.xml
@@ -4,10 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-<<<<<<< HEAD
     android:background="@drawable/main_background"
-=======
->>>>>>> 5bbb34d62e594c73e0942835c334626498b4c145
     tools:context=".MainActivity">
 
     <TextView
@@ -17,7 +14,7 @@
         android:layout_marginTop="24dp"
         android:alpha="123"
         android:fontFamily="sans-serif-black"
-        android:text="Давайте составим маршрут вашего путешествия:"
+        android:text="@string/texTitle"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -30,7 +27,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="36dp"
         android:layout_marginEnd="16dp"
-        android:text="Выберите транспорт, на котором хотите добраться до курорта:"
+        android:text="@string/textView"
         app:layout_constraintBottom_toTopOf="@+id/switchTrain"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -43,20 +40,22 @@
         android:layout_height="27dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="88dp"
-        android:text="Поезд"
+        android:text="@string/switchTrain"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textTitle" />
+        app:layout_constraintTop_toBottomOf="@+id/textTitle"
+        tools:ignore="UseSwitchCompatOrMaterialXml" />
 
     <Switch
         android:id="@+id/switchAirplane"
         android:layout_width="105dp"
         android:layout_height="27dp"
-        android:layout_marginTop="16dp"
-        android:text="Самолёт"
+        android:layout_marginTop="52dp"
+        android:text="@string/switchAirplane"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.058"
+        app:layout_constraintHorizontal_bias="0.856"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/switchTrain" />
+        app:layout_constraintTop_toTopOf="@+id/textView"
+        tools:ignore="UseSwitchCompatOrMaterialXml" />
 
     <Switch
         android:id="@+id/switchOwnCar"
@@ -64,7 +63,7 @@
         android:layout_height="27dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="88dp"
-        android:text="Машина"
+        android:text="@string/switch0wnCar"
         app:layout_constraintStart_toEndOf="@+id/switchTrain"
         app:layout_constraintTop_toBottomOf="@+id/textTitle" />
 
@@ -73,8 +72,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:text="Желаемая цена (руб):"
+        android:layout_marginTop="80dp"
+        android:text="@string/textView2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/switchAirplane" />
 
@@ -82,8 +81,8 @@
         android:id="@+id/seekPrice"
         android:layout_width="118dp"
         android:layout_height="20dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="80dp"
         android:max="100"
         app:layout_constraintStart_toEndOf="@+id/textView2"
         app:layout_constraintTop_toBottomOf="@+id/switchAirplane" />
@@ -94,7 +93,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        android:text="0"
+        android:text="@string/textPrice"
         app:layout_constraintStart_toEndOf="@+id/seekPrice"
         app:layout_constraintTop_toBottomOf="@+id/switchAirplane" />
 
@@ -104,8 +103,8 @@
         android:layout_height="51dp"
         android:layout_marginStart="12dp"
         android:layout_marginTop="20dp"
-        android:text="Выбрать дату отправления"
-        android:textSize="10sp"
+        android:text="@string/btnDeparture"
+        android:textSize="11sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
@@ -115,8 +114,8 @@
         android:layout_height="51dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="12dp"
-        android:text="Выбрать дату прибытия"
-        android:textSize="10sp"
+        android:text="@string/btnArrival"
+        android:textSize="11sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/seekPrice" />
 
@@ -144,7 +143,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
         android:layout_marginTop="44dp"
-        android:text="Желаемое время в пути:"
+        android:text="@string/textView5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonDeparture" />
 
@@ -153,7 +152,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="176dp"
-        android:text="дней"
+        android:text="@string/textView6"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editDays" />
 
@@ -162,7 +161,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:text="часов"
+        android:text="@string/textView7"
         app:layout_constraintStart_toEndOf="@+id/textView6"
         app:layout_constraintTop_toBottomOf="@+id/editHours" />
 
@@ -176,7 +175,8 @@
         android:inputType="textPersonName"
         android:textSize="10sp"
         app:layout_constraintStart_toEndOf="@+id/textView5"
-        app:layout_constraintTop_toBottomOf="@+id/buttonDeparture" />
+        app:layout_constraintTop_toBottomOf="@+id/buttonDeparture"
+        android:autofillHints="" />
 
     <EditText
         android:id="@+id/editHours"
@@ -194,13 +194,48 @@
         android:id="@+id/editTextNumber"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="100dp"
+        android:layout_marginBottom="152dp"
         android:ems="10"
         android:inputType="number"
-        tools:layout_editor_absoluteX="101dp"
-        tools:layout_editor_absoluteY="442dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="54dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="100dp"
+        android:layout_marginEnd="72dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/textView2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/switchTrain"
+        app:layout_constraintVertical_bias="0.988"
+        app:srcCompat="@drawable/air_icon" />
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="58dp"
+        android:layout_height="49dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="67dp"
+        app:layout_constraintEnd_toStartOf="@+id/imageView2"
+        app:layout_constraintTop_toBottomOf="@+id/switchOwnCar"
+        app:srcCompat="@drawable/auto_iconoff" />
+
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="56dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="37dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="32dp"
+        app:layout_constraintEnd_toStartOf="@+id/imageView3"
+        app:layout_constraintHorizontal_bias="0.228"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/switchTrain"
+        app:srcCompat="@drawable/train_iconoff" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
-<<<<<<< HEAD
 
-=======
->>>>>>> 5bbb34d62e594c73e0942835c334626498b4c145
