--- a/front/app/src/main/res/layout/activity_main.xml
+++ b/front/app/src/main/res/layout/activity_main.xml
@@ -84,25 +84,6 @@
         app:layout_constraintStart_toEndOf="@+id/textView6"
         app:layout_constraintTop_toBottomOf="@+id/editHours" />
 
-    <SeekBar
-        android:id="@+id/seekMinPrice"
-        android:layout_width="118dp"
-        android:layout_height="20dp"
-        android:layout_marginStart="7dp"
-        android:layout_marginTop="12dp"
-        android:max="100"
-        app:layout_constraintStart_toEndOf="@+id/textView8"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
-
-    <SeekBar
-        android:id="@+id/seekMaxPrice"
-        android:layout_width="118dp"
-        android:layout_height="20dp"
-        android:layout_marginTop="4dp"
-        android:max="100"
-        app:layout_constraintStart_toEndOf="@+id/textView9"
-        app:layout_constraintTop_toBottomOf="@+id/seekMinPrice" />
-
     <TextView
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
@@ -156,26 +137,6 @@
         app:layout_constraintStart_toEndOf="@+id/editDays"
         app:layout_constraintTop_toBottomOf="@+id/textDateDeparture" />
 
-    <TextView
-        android:id="@+id/textMinPrice"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="12dp"
-        android:text="0 рублей"
-        app:layout_constraintStart_toEndOf="@+id/seekMinPrice"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
-
-    <TextView
-        android:id="@+id/textMaxPrice"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="36dp"
-        android:text="0 рублей"
-        app:layout_constraintStart_toEndOf="@+id/seekMinPrice"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
-
     <Button
         android:id="@+id/buttonArrival"
         android:layout_width="187dp"
@@ -185,7 +146,7 @@
         android:text="Выбрать дату прибытия"
         android:textSize="10sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textMaxPrice" />
+        app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
     <TextView
         android:id="@+id/textDateDeparture"
@@ -237,6 +198,33 @@
         android:text="Максимум:"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
+
+    <EditText
+        android:id="@+id/editMin"
+        android:layout_width="213dp"
+        android:layout_height="22dp"
+        android:layout_marginTop="12dp"
+        android:ems="10"
+        android:inputType="number"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        tools:layout_editor_absoluteX="106dp" />
+
+    <EditText
+        android:id="@+id/editMax"
+        android:layout_width="213dp"
+        android:layout_height="22dp"
+        android:ems="10"
+        android:inputType="number"
+        app:layout_constraintTop_toBottomOf="@+id/editMin"
+        tools:layout_editor_absoluteX="106dp" />
+
+    <TextView
+        android:id="@+id/textViewOutput"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        tools:layout_editor_absoluteX="176dp"
+        tools:layout_editor_absoluteY="632dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
