--- a/front/app/src/main/res/layout/activity_main.xml
+++ b/front/app/src/main/res/layout/activity_main.xml
@@ -38,7 +38,7 @@
         android:id="@+id/switchTrain"
         android:layout_width="105dp"
         android:layout_height="27dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="48dp"
         android:layout_marginTop="88dp"
         android:text="Поезд"
         app:layout_constraintStart_toStartOf="parent"
@@ -48,21 +48,13 @@
         android:id="@+id/switchAirplane"
         android:layout_width="105dp"
         android:layout_height="27dp"
-        android:layout_marginStart="36dp"
+        android:layout_marginStart="100dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="48dp"
         android:text="Самолёт"
-        app:layout_constraintStart_toEndOf="@+id/switchOwnCar"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
-
-    <Switch
-        android:id="@+id/switchOwnCar"
-        android:layout_width="105dp"
-        android:layout_height="27dp"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="88dp"
-        android:text="Машина"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/switchTrain"
-        app:layout_constraintTop_toBottomOf="@+id/textTitle" />
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <Button
         android:id="@+id/buttonDeparture"
